# ffmpegDemo

Shaders/: fragment.fsh
ffmpegDemo/: CMakeLists.txt  Main.qml  ZN_MediaPlayer.qml  appffmpegDemo_qml_module_dir_map.qrc  audioitem.cpp  audioitem.h  decoder.cpp  decoder.h  dhstream.cpp  dhstream.h  frameprovider.cpp  frameprovider.h  i420render.cpp  i420render.h  main.cpp  mutex.c  mux.cpp  mux.h  nv12render.cpp  nv12render.h  qmldir  videoitem.cpp  videoitem.h
release/: .ninja_deps  .ninja_log  CMakeCache.txt  appffmpegDemo.exp  appffmpegDemo.lib  appffmpegdemo_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
release/.cmake/api/v1/reply.prev/: cache-v2-c349433da02bf1b47e88.json  cmakeFiles-v1-fb829fce7ad5bae0875e.json  codemodel-v2-203c8b0469a5ca7c2aac.json  directory-.-Release-453633af51c5b3cc7c28.json  index-2024-01-19T06-11-34-0870.json  target-all_qmllint-Release-9c8c2f6c22e7dbce56f1.json  target-all_qmllint_module-Release-479ab47be431baabfce0.json  (+4 more)
release/.qt/: QtDeploySupport.cmake
release/.qt/deploy_qml_imports/: appffmpegDemo.cmake
release/.qt_plugins/: Qt6_QmlPlugins_Imports_appffmpegDemo.cmake  Qt6_QmlPlugins_Imports_appffmpegDemo.rsp
release/.qtc_clangd/: compile_commands.json
release/.rcc/: appffmpegDemo_raw_qml_0.qrc  qmake_ffmpegDemo.qrc  qrc_appffmpegDemo_raw_qml_0.cpp  qrc_qmake_ffmpegDemo.cpp
release/.rcc/qmlcache/: appffmpegDemo_Main_qml.cpp  appffmpegDemo_ZN_MediaPlayer_qml.cpp  appffmpegDemo_qml_loader_file_list.rsp  appffmpegDemo_qmlcache_loader.cpp
release/appffmpegDemo_autogen/: deps  mocs_compilation.cpp
release/appffmpegDemo_autogen/EWIEGA46WW/: moc_decoder.cpp  moc_decoder.cpp.d  moc_decoder.cpp.json  moc_videoitem.cpp  moc_videoitem.cpp.d  moc_videoitem.cpp.json
release/ffmpegDemo/: Main.qml  ZN_MediaPlayer.qml  appffmpegDemo_qml_module_dir_map.qrc
release/meta_types/: appffmpegDemo_json_file_list.txt  appffmpegDemo_json_file_list.txt.timestamp  qt6appffmpegdemo_release_metatypes.json.gen
release/qmltypes/: appffmpegDemo_foreign_types.txt
(+751 files in other folders)
